# Data2REDCAP

./: .gitignore  Pipfile  README.md  setup.cfg
.github/: CODEOWNERS
config/: config_example.json
src/data2redcap/: __main__.py  main.py  redcap_project.py  utils.py
src/data2redcap/transform/: grouping.py  survey.py  transform.py
