[metadata]
name = data2redcap
description = "A CLI interface for aggregating data to be uploaded into REDCAP"

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas~=1.5.3
    openpyxl~=3.1.2
    setuptools~=67.0.0
    typer~=0.7.0
python_requires = >=3.8, <=3.12
include_package_data = True
zip_safe = False
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    d2r = data2redcap.main:app
